@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-04T00:33:31Z",
-  "count" : 9,
+  "timestamp" : "2022-04-17T08:09:41Z",
+  "count" : 8,
   "count_minmax" : [ 0, 9 ],
   "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 0,
