@@ -1,10 +1,10 @@
 {
-  "count": 119,
+  "count": 123,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-04-03T00:00:00Z",
-      "count": 9,
+      "count": 8,
       "uniques": 1
     },
     {
@@ -64,7 +64,12 @@
     },
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 13,
+      "count": 15,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-17T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
